--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/wassay.jpg" alt="">
+            <img src="./assets/wassay-modified.png" alt="">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
