--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Muhammad Wassay Shahid</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
@@ -43,8 +43,8 @@
             <h1 class="title">Muhammad Wassay Shahid</h1>
             <p class="section__text__p2">a Computer Scientist</p>
             <div class="btn-container">
-                <button class="btn btn-colo-2" onclick="window.open('./assets/resume.pdf')"> Download CV</button>
-                <button class="btn btn-colo-2" onclick="location.href='./#contact'">Contact Info</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')"> Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" 
@@ -59,6 +59,31 @@
                 />
             </div>
         </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Get to know more</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/education.png" 
+                        alt="Education icon" 
+                        class="icon"/>
+                        <h2>Education</h2>
+                        <h3>Mcmaster University</h3>
+                        <p>Bachelor of Computer Science</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p class="about-me">I am a highly motivated Computer Science student at McMaster University with a deep passion for technology, particularly in software development. I thrive on tackling new challenges and seeking out opportunities to expand my knowledge and skills.
+                        I am currently seeking internships or co-op opportunities to gain valuable industry experience and further refine my expertise. I have a solid foundation in programming languages such as Python, JavaScript, Java, and C/C++, along with hands-on experience using tools like Git and Linux.
+                        In addition to my technical abilities, I highly value collaboration and community engagement. I’m always eager to connect with others in the tech space, whether for project collaborations or discussions about the latest in technology. Feel free to connect with me on LinkedIn.
+                        I am committed to continuous learning and always welcome feedback on my work.</p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#expereince'"/>
     </section>
     <script src="script.js"></script>
 </body>
