--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <h1 class="title">Muhammad Wassay Shahid</h1>
             <p class="section__text__p2">a Computer Scientist</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')"> Download CV</button>
+              <a href="./assets/resume.pdf" download="resume">
+                <button class="btn btn-color-2">Download CV</button>
+              </a>              
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
