--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
             <h1 class="title">Muhammad Wassay Shahid</h1>
             <p class="section__text__p2">a Computer Scientist</p>
             <div class="btn-container">
-              <a href="./assets/Resume.pdf" download="resume">
-                <button class="btn btn-color-2">Download CV</button>
-              </a>              
+                <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')"> Download CV</button>            
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
