--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav id="hamburger-nav">
         <div class="logo"> Muhammad Wassay Shahid</div>
-        <div class="hamburger-menu"></div>
+        <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
             <span></span>
             <span></span>
