--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:wassay.shahid@gamil.com">wassay.shahid@gamil.com</a></p>
+            <p><a href="mailto:wassay.shahid@gmail.com">wassay.shahid@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
             <img
